AuthController && PhoneInfoController penambahan layer validasi pada SecurityConfig.java jadi divalidasi dulu 401 (Unauthorized): User belum login/token invalid 403 (Forbidden): User sudah login tapi tidak punya permission 404 (Not Found): Resource tidak ditemukan (business logic error)